[package]
name = "linkage"
version = "0.1.0"
authors = ["Clark Moody <clark@clarkmoody.com>"]
edition = "2021"

[dependencies]
dirs-next = "2.0"
itertools = "0.10"
palette = "0.5"
rand = "0.8"
serde_json = "1.0"
statrs = "0.15"

[dependencies.time]
version = "0.2"
features = ["serde", "std"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["fs"]

[dependencies.iced]
version = "0.3"
features = ["glow", "palette", "tokio"]

[dependencies.iced_native]
version = "0.4"

[dependencies.iced_graphics]
version = "0.2"

[dependencies.iced_futures]
version = "0.3"

[patch.crates-io]
iced = { git = "https://github.com/hecrj/iced.git", rev = "8a2a7f7e2144542b47c1d259f296ad7dcc5f3cf9"}
iced_native = { git = "https://github.com/hecrj/iced.git", rev = "8a2a7f7e2144542b47c1d259f296ad7dcc5f3cf9"}
iced_graphics = { git = "https://github.com/hecrj/iced.git", rev = "8a2a7f7e2144542b47c1d259f296ad7dcc5f3cf9"}
iced_futures = { git = "https://github.com/hecrj/iced.git", rev = "8a2a7f7e2144542b47c1d259f296ad7dcc5f3cf9"}
