[package]
name = "linkage"
version = "0.1.0"
authors = ["Clark Moody <clark@clarkmoody.com>"]
edition = "2021"

[dependencies]
dirs-next = "2.0"
itertools = "0.10"
palette = "0.6"
rand = "0.8"
serde_json = "1.0"
statrs = "0.15"

[dependencies.time]
version = "0.2"
features = ["serde", "std"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["fs"]

[dependencies.iced]
features = ["palette", "tokio", "wgpu", "tiny-skia"]
git = "https://github.com/hecrj/iced.git"
rev = "0b459c8e240abf83bb62902a504c018194acdbb6"
